--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- for Responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- SEO -->
     <meta name="author" content="Musa OCAK" />
     <meta name="Description" content="for one page" />
     <meta name="keyword" content="Html5,Css3, Js, React ,Bootstrap5" />
@@ -29,7 +31,6 @@
 
 <body>
     <!-- start codes -->
-   
 
     <!-- end codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
