--- a/index.html
+++ b/index.html
@@ -29,8 +29,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar_id">
+    <noscript>Bu Browser Javascripti Desteklemiyor.</noscript>
+
     <!-- start codes -->
+
+    <!-- start nav codes  -->
+    <nav id="navbar_id" class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+        <div class="container"> <!-- container-fluid -->
+            <a class="navbar-brand" href="#"><i class="fa-brands fa-blogger"></i></a>
+            <!-- buttonda redirect yap -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Arama için..." aria-label="Search">
+                    <button class="btn btn-primary" type="submit">Ara</button> <!-- btn-outline-success -->
+                </form>
+            </div>
+        </div>
+    </nav>
+    <!-- end nav codes -->
+
+    <!-- start header codes -->
+    <header id="header_id"></header>
+    <!-- end header codes -->
+
+    <!-- start main codes -->
+    <main id="main_id"></main>
+    <!-- end main codes -->
+
+    <!-- start footer codes -->
+    <footer id="footer_id"></footer>
+    <!-- end footer codes -->
 
     <!-- end codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
