--- a/index.html
+++ b/index.html
@@ -80,28 +80,44 @@
     <!-- end nav codes -->
 
     <!-- start header codes -->
-    <header id="header_id"></header>
-    <!-- end header codes -->
+    <header id="header_id">
+        <!-- div.text-white>div.container>div.p-5.text-uppercase.display-4{FrontEnd Eğitimimize Hoşgeldiniz}+h4{Html5 Css3 Js React}+a.btn.btn-primary+a.btn.btn-danger+a.btn.btn-success -->
+        <header id="header_id">
+            <div class="text-white">
+                <div class="container text-center">
+                    <div class="p-5 text-uppercase display-4">FrontEnd Eğitimimize Hoşgeldiniz</div>
+                    <h4>Html5 Css3 Js React</h4>
+                    <a href="" class="btn btn-primary">LinkedIn</a>
+                    <a href="" class="btn btn-danger">Blog</a>
+                    <a href="" class="btn btn-success">YouTube</a>
+                </div>
+            </div>
+        </header>
+        <!-- end header codes -->
 
-    <!-- start main codes -->
-    <main id="main_id"></main>
-    <!-- end main codes -->
+        <!-- start main codes -->
+        <main id="main_id">
 
-    <!-- start footer codes -->
-    <footer id="footer_id"></footer>
-    <!-- end footer codes -->
+        </main>
+        <!-- end main codes -->
 
-    <!-- end codes -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous" />
-    </script>
+        <!-- start footer codes -->
+        <footer id="footer_id"></footer>
+        <!-- end footer codes -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous" />
-    </script>
+        <!-- end codes -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous" />
+        </script>
 
-    <!-- external JS -->
-    <script src="template.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+            integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+            crossorigin="anonymous" />
+        </script>
+
+        <!-- external JS -->
+        <script src="template.js"></script>
 
 </body>
 
