July 19th-Register

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#LoginId">Login</a></li>
-                            <li><a class="dropdown-item" href="#">Register</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" id="register">Register</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -94,7 +94,7 @@
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitleId">Register</h5>
+                    <h5 class="modal-title" id="modalTitleId">Login</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -102,25 +102,17 @@
                         <!-- Name input -->
                         <div class="form-outline mb-4">
                             <input type="text" id="form5Example1" class="form-control" />
-                            <label class="form-label" for="form5Example1">Name</label>
+                            <label class="form-label" for="form5Example1">Email address</label>
                         </div>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
                             <input type="email" id="form5Example2" class="form-control" />
-                            <label class="form-label" for="form5Example2">Email address</label>
-                        </div>
-
-                        <!-- Checkbox -->
-                        <div class="form-check d-flex justify-content-center mb-4">
-                            <input class="form-check-input me-2" type="checkbox" value="" id="form5Example3" checked />
-                            <label class="form-check-label" for="form5Example3">
-                                I have read and agree to the terms
-                            </label>
+                            <label class="form-label" for="form5Example2">Password</label>
                         </div>
 
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-4">Subscribe</button>
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Giriş Yap</button>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -129,7 +121,41 @@
             </div>
         </div>
     </div>
-
+    <!-- Register -->
+    <div id="toggle">
+        <div class="register-show">
+            <div class="form-area">
+                <button class="close-btn" id="closeBtn">
+                    <i class="fa fa-close" aria-hidden="true"></i>
+                </button>
+                <form action="" class="form-register" id="formValue">
+                    <div class="form-group">
+                        <h6>First Name:</h6>
+                        <input type="text" name="first" id="firstName" />
+                    </div>
+                    <div class="form-group">
+                        <h6>Last Name:</h6>
+                        <input type="text" name="lastName" id="lastName" />
+                    </div>
+                    <div class="form-group">
+                        <h6>Email:</h6>
+                        <input type="email" name="email" id="email" />
+                    </div>
+                    <div class="form-group">
+                        <h6>Password:</h6>
+                        <input type="password" name="password" id="password" />
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" name="checkbox" id="check" />
+                        <h6>Accept policy</h6>
+                    </div>
+                    <div>
+                        <button id="submitBTn" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <!-- start header codes -->
     <!-- div.text-white>div.container>div.p-5.text-uppercase.display-4{FrontEnd Eğitimimize Hoşgeldiniz}+h4{Html5 Css3 Js React}+a.btn.btn-primary+a.btn.btn-danger+a.btn.btn-success -->
