--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#LoginId">Login</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" id="register">Register</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal"
+                                    data-bs-target="#registerId">Register</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -121,41 +122,94 @@
             </div>
         </div>
     </div>
+
+
     <!-- Register -->
-    <div id="toggle">
-        <div class="register-show">
-            <div class="form-area">
-                <button class="close-btn" id="closeBtn">
-                    <i class="fa fa-close" aria-hidden="true"></i>
-                </button>
-                <form action="" class="form-register" id="formValue">
-                    <div class="form-group">
-                        <h6>First Name:</h6>
-                        <input type="text" name="first" id="firstName" />
-                    </div>
-                    <div class="form-group">
-                        <h6>Last Name:</h6>
-                        <input type="text" name="lastName" id="lastName" />
-                    </div>
-                    <div class="form-group">
-                        <h6>Email:</h6>
-                        <input type="email" name="email" id="email" />
-                    </div>
-                    <div class="form-group">
-                        <h6>Password:</h6>
-                        <input type="password" name="password" id="password" />
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" name="checkbox" id="check" />
-                        <h6>Accept policy</h6>
-                    </div>
-                    <div>
-                        <button id="submitBTn" type="submit">Submit</button>
-                    </div>
-                </form>
+    <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+    <div class="modal fade" id="registerId" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false"
+        role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitleId">Register</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <section class="vh-100 bg-image"
+                        style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+                        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+                            <div class="container h-100">
+                                <div class="row d-flex justify-content-center align-items-center h-100">
+                                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                                        <div class="card" style="border-radius: 15px;">
+                                            <div class="card-body p-5">
+                                                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+
+                                                <form>
+
+                                                    <div class="form-outline mb-4">
+                                                        <input type="text" id="form3Example1cg"
+                                                            class="form-control form-control-lg" />
+                                                        <label class="form-label" for="form3Example1cg">User
+                                                            Name</label>
+                                                    </div>
+
+                                                    <div class="form-outline mb-4">
+                                                        <input type="email" id="form3Example3cg"
+                                                            class="form-control form-control-lg" />
+                                                        <label class="form-label" for="form3Example3cg">Your
+                                                            Email</label>
+                                                    </div>
+
+                                                    <div class="form-outline mb-4">
+                                                        <input type="password" id="form3Example4cg"
+                                                            class="form-control form-control-lg" />
+                                                        <label class="form-label" for="form3Example4cg">Password</label>
+                                                    </div>
+
+                                                    <div class="form-outline mb-4">
+                                                        <input type="password" id="form3Example4cdg"
+                                                            class="form-control form-control-lg" />
+                                                        <label class="form-label" for="form3Example4cdg">Repeat your
+                                                            password</label>
+                                                    </div>
+
+                                                    <div class="form-check d-flex justify-content-center mb-5">
+                                                        <input class="form-check-input me-2" type="checkbox" value=""
+                                                            id="form2Example3cg" />
+                                                        <label class="form-check-label" for="form2Example3g">
+                                                            I agree all statements in <a href="#!"
+                                                                class="text-body"><u>Terms of service</u></a>
+                                                        </label>
+                                                    </div>
+
+                                                    <div class="d-flex justify-content-center">
+                                                        <button type="button"
+                                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                                                    </div>
+
+                                                    <p class="text-center text-muted mt-5 mb-0">Have already an account?
+                                                        <a href="#!" class="fw-bold text-body"><u>Login here</u></a>
+                                                    </p>
+
+                                                </form>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                    <button type="button" class="btn btn-primary">Kaydet</button>
+                </div>
             </div>
         </div>
     </div>
+
 
     <!-- start header codes -->
     <!-- div.text-white>div.container>div.p-5.text-uppercase.display-4{FrontEnd Eğitimimize Hoşgeldiniz}+h4{Html5 Css3 Js React}+a.btn.btn-primary+a.btn.btn-danger+a.btn.btn-success -->
