--- a/index.html
+++ b/index.html
@@ -228,122 +228,42 @@
 
     <!-- start main codes -->
     <main id="main_id">
-        <section>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatibus iure aliquid hic soluta
-                blanditiis quidem exercitationem, repellendus iste vero laborum libero inventore, pariatur accusantium
-                voluptate numquam nam sit delectus?
-                Nemo dolores quo cumque quia obcaecati facere illo odit? Cumque numquam repudiandae dolorum officiis
-                quis. Maiores fuga unde eaque placeat magni, nihil aut, deleniti dolor earum ab, repudiandae cum
-                corrupti.
-                Quos cupiditate sapiente culpa iste voluptatum porro voluptatem minus magni adipisci nemo earum corporis
-                in, eius ea, a molestias ad itaque veritatis laboriosam. Eligendi possimus praesentium porro! Doloribus,
-                odio exercitationem.
-                Rem ullam eius eligendi illum nostrum sint ad. Consequatur autem optio natus ipsa vel? Obcaecati ad quas
-                esse rem! Vitae repudiandae consequuntur dignissimos harum, vel atque! Obcaecati mollitia nostrum optio!
-                Minima distinctio rem quis odio, nisi quisquam ad. Saepe esse suscipit ipsam accusamus laboriosam
-                incidunt nesciunt veniam, debitis vel, dolore sit molestias adipisci eum ipsum quidem nulla. Architecto,
-                eveniet cupiditate.
-                Odit quibusdam, corporis tenetur perspiciatis pariatur ut esse nisi omnis fuga provident eligendi
-                dolores iste voluptatem quidem eos impedit maxime! Ex sed eveniet adipisci, impedit natus placeat
-                perspiciatis veritatis ipsum!
-                Delectus ex cum eos optio sunt consequuntur. Eius laborum ratione sint mollitia vero aut reiciendis
-                quasi, in incidunt odit veritatis, eveniet eos nobis hic sit nihil similique recusandae a blanditiis?
-                Velit alias molestiae debitis distinctio! Voluptates aliquam exercitationem accusamus cum praesentium
-                eaque, aperiam ullam. Autem optio cumque animi, vitae ipsa dolorum ad quo, eligendi beatae, facilis
-                explicabo porro asperiores corporis!
-                Similique, enim totam reprehenderit quo maiores, quibusdam dolorum ratione, quis quia temporibus
-                accusantium saepe nesciunt incidunt culpa cumque repudiandae eveniet at commodi laboriosam repellat
-                doloribus! Aliquam quo consequatur soluta harum?
-                Eligendi aliquam ratione cumque odit inventore doloremque ut repellendus porro nemo harum accusamus
-                illum, obcaecati rerum ducimus, tempore quidem molestiae, facere dolore esse libero. Fugit atque nihil
-                quidem ducimus eum!
-                Minima, pariatur. Commodi magni incidunt eos quasi vero, debitis laudantium deleniti aliquam asperiores
-                laboriosam adipisci at autem temporibus soluta sed eveniet possimus natus corporis? Explicabo nihil rem
-                obcaecati recusandae culpa!
-                Eveniet, sunt perferendis! Cum ratione tempora maiores odit atque, nesciunt deleniti nobis quidem ipsum
-                impedit magnam, porro excepturi ea ex ipsa minus. Sequi nesciunt mollitia culpa error iusto ipsum fuga.
-                Fugiat, assumenda ratione beatae iste enim necessitatibus velit at praesentium, ipsa mollitia nesciunt
-                autem eum hic consectetur accusantium atque, repellat similique itaque cum totam quae. Sunt possimus
-                quibusdam harum molestias.
-                Doloremque asperiores ex enim iste perspiciatis, quam autem veniam alias dolorem nobis voluptatibus
-                magnam nam assumenda eaque excepturi, aspernatur iusto labore odio quas quis aliquam harum consectetur
-                exercitationem! Animi, nostrum.
-                Dolore exercitationem quos quas dolor beatae obcaecati accusamus reiciendis numquam voluptatem explicabo
-                rerum ipsam impedit inventore fuga ut recusandae quae aut, maiores ipsa doloribus sit sequi quibusdam
-                nostrum! Culpa, ut.
-                Sed, officia incidunt! A, sequi culpa vel commodi iusto suscipit, nobis praesentium alias sunt inventore
-                similique voluptatem repellendus fugiat possimus excepturi neque est iure tempore itaque? Nisi maiores
-                quo itaque.
-                Quo maiores laborum voluptatibus officiis itaque vero voluptates sint, corrupti neque aperiam porro a
-                distinctio deserunt eveniet, tempore dolore ut quia. Quae voluptate quia ipsa quidem nisi veritatis
-                alias amet.
-                Ullam, magnam? Autem ab quas perferendis sit fugit nulla, ipsa eius laborum fuga! Eius voluptatem
-                voluptatibus nulla, impedit perspiciatis nesciunt a, id amet atque odio exercitationem? Nesciunt unde
-                voluptatum eaque!
-                Ipsum dolorem qui minima iste laboriosam, dolore esse illum eveniet quam! Optio harum cum voluptatibus
-                inventore, quam quaerat numquam, fugit iste cumque pariatur corrupti vero, facere perspiciatis eius
-                dolores culpa.
-                Earum officiis adipisci quam dolores iste iure blanditiis debitis incidunt iusto aperiam rerum vel,
-                consequatur delectus tempora ipsum, velit aspernatur doloremque vitae expedita ad sunt ratione illo
-                minus! Et, recusandae.
-                Molestias blanditiis, nemo cumque vero natus quam debitis perferendis! Laborum commodi, illo beatae
-                voluptates placeat nostrum repudiandae tenetur aliquam? In quos illum ex rerum exercitationem explicabo
-                mollitia optio placeat a.
-                Consequatur, veritatis possimus quam illo molestias sapiente repellendus beatae fugiat, odit itaque ipsa
-                quibusdam sunt vitae. Reiciendis cumque explicabo esse voluptatibus quam, error corporis inventore?
-                Voluptates facere inventore magnam dolorem.
-                Debitis nulla quibusdam laborum quod! Quae recusandae, minima maxime atque officiis culpa aliquam
-                architecto dolores incidunt ducimus hic rerum, saepe ipsam eos iusto. Eos vero eius tenetur?
-                Perspiciatis, iste dolor?
-                Odio neque aut rerum. Consequatur harum ipsa voluptate deleniti facere doloribus vel esse ipsum fugit
-                provident. Atque, quibusdam unde modi placeat, veritatis eveniet esse architecto rem iusto quo et. Aut?
-                Illum eos sapiente placeat incidunt tenetur aliquam quis excepturi, libero laudantium dicta
-                exercitationem cumque possimus, cum illo quaerat? Magni omnis, dolorem a itaque deleniti molestias quo
-                voluptatum. Cupiditate, fugiat vero.
-                Consectetur vel quod doloribus nihil nulla numquam excepturi iusto quis. Error, aspernatur consectetur
-                illum, non labore itaque reiciendis placeat sint impedit, repudiandae deserunt reprehenderit unde vero
-                fugiat id? Exercitationem, nemo!
-                Praesentium error temporibus aut beatae, asperiores, veniam quas eligendi maxime voluptate
-                exercitationem totam laborum architecto laboriosam culpa! Ab eius beatae harum itaque quibusdam sapiente
-                amet rerum alias debitis quam? Unde.
-                Veritatis earum mollitia similique ad rerum totam fuga qui dignissimos perspiciatis modi ducimus
-                incidunt, adipisci accusantium debitis temporibus labore voluptatem hic architecto nihil ipsam.
-                Necessitatibus deleniti dolorem quibusdam tempore sequi.
-                Sit distinctio consequatur ratione ex voluptatem, eum libero dicta maxime, ab voluptate debitis! Ab
-                natus, necessitatibus est enim minima libero non reprehenderit tempora a minus iste praesentium aliquid
-                deleniti voluptates.
-                Nemo vel quibusdam nam odit, reiciendis vero sed eos eveniet obcaecati eaque maxime suscipit, omnis
-                dolore dolorum officiis repellendus ipsum ullam dolores numquam, natus delectus modi? Amet sapiente
-                officia eveniet.
-                Ipsam nobis dolores et est cum autem iste id tempora ea quo neque libero sit eos molestias, excepturi
-                voluptatem doloremque hic explicabo esse voluptatibus? Aliquam nulla vero maiores explicabo error.
-                Libero blanditiis temporibus quisquam dignissimos consectetur odio quaerat totam, alias doloremque vero
-                et beatae magnam accusamus itaque quibusdam minima asperiores provident minus laboriosam quam neque
-                excepturi culpa doloribus! Commodi, architecto?
-                Tempora earum autem fugit delectus, et perspiciatis quae voluptatibus! Velit repellendus deserunt
-                dolorum voluptate blanditiis rerum voluptatum consequatur tempore odio asperiores atque ab cum quo, nam
-                unde aperiam placeat consequuntur!
-                Placeat illum unde modi rerum repudiandae nulla tenetur obcaecati? Tempora vel veniam incidunt
-                voluptatum ad aut magni totam officiis exercitationem. Natus officiis placeat inventore praesentium,
-                magnam officia neque illo quis.
-                Recusandae asperiores minus fuga iste! Reprehenderit facilis, temporibus officiis eum unde harum ut esse
-                at tempore non nisi. Iusto praesentium deserunt ipsam, nemo minus itaque corporis dolore non amet
-                adipisci.
-                Laborum rem sit non officia fugit praesentium, qui nemo voluptatum officiis harum reiciendis facere nam
-                natus cupiditate error explicabo doloribus eos. Recusandae accusamus quidem voluptates nam, at ullam
-                illum incidunt.
-                Laudantium, quaerat molestias consectetur adipisci ratione illum eos fugiat ipsum, iusto accusantium,
-                inventore rerum doloremque? Modi obcaecati voluptates quam, unde perferendis, pariatur doloribus dolores
-                reprehenderit dolorum nihil vero delectus provident.
-                Labore architecto deleniti at a quas quae totam soluta quis reiciendis. Nulla atque autem expedita,
-                accusamus esse quasi ea dolor ad sint ratione, maxime eveniet? Totam quos mollitia ipsam saepe?
-                Ipsum doloremque debitis quisquam rem necessitatibus saepe quam explicabo cum tempore et nostrum earum
-                nihil numquam dolore veritatis magni, dolores, consequatur pariatur? Pariatur corrupti vitae quo
-                asperiores consequatur suscipit dolores.
-                Nobis iste, sapiente quae itaque ut pariatur, sunt vel esse cum quisquam omnis cupiditate sed placeat
-                necessitatibus atque vitae facere. Maiores omnis odit illo similique molestias quidem, iure numquam
-                minus!</p>
+        <!-- section#messages>div>h2.text-center.text-uppercase{Çalışmalarımız}^div.container>div.row>div.text-center.col-12.col-md-4.col-xl-3>i+h4{HTML5}+p{lorem15}+button.btn.btn-primary{Daha fazla ..} -->
+        <section id="messages">
+            <div>
+                <h2 class="myHeading">Çalışmalarımız</h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
+                        <i class="fa-brands fa-html5"></i>
+                        <h4>HTML5</h4>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <button class="btn btn-primary">Daha fazla ..</button>
+                    </div>
 
+                    <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
+                        <i class="fa-brands fa-css3 text-danger"></i>
+                        <h4>CSS3</h4>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <button class="btn btn-primary">Daha fazla ..</button>
+                    </div>
+
+                    <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
+                        <i class="fa-brands fa-js"></i>
+                        <h4>JavaScript</h4>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <button class="btn btn-primary">Daha fazla ..</button>
+                    </div>
+
+                    <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
+                        <i class="fa-brands fa-react text-success"></i>
+                        <h4>REACT JS</h4>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <button class="btn btn-primary">Daha fazla ..</button>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
