--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 
     <!-- start main codes -->
     <main id="main_id">
+        <!-- messages-start -->
         <!-- section#messages>div>h2.text-center.text-uppercase{Çalışmalarımız}^div.container>div.row>div.text-center.col-12.col-md-4.col-xl-3>i+h4{HTML5}+p{lorem15}+button.btn.btn-primary{Daha fazla ..} -->
         <section id="messages">
             <div>
@@ -238,34 +239,65 @@
                     <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
                         <i class="fa-brands fa-html5"></i>
                         <h4>HTML5</h4>
-                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            adipisci id nisi sint saepe similique.</p>
                         <button class="btn btn-primary">Daha fazla ..</button>
                     </div>
 
                     <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
                         <i class="fa-brands fa-css3 text-danger"></i>
                         <h4>CSS3</h4>
-                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            adipisci id nisi sint saepe similique.</p>
                         <button class="btn btn-primary">Daha fazla ..</button>
                     </div>
 
                     <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
                         <i class="fa-brands fa-js"></i>
                         <h4>JavaScript</h4>
-                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            adipisci id nisi sint saepe similique.</p>
                         <button class="btn btn-primary">Daha fazla ..</button>
                     </div>
 
                     <div class="text-center col-12 col-md-4 col-xl-3 mb-4">
                         <i class="fa-brands fa-react text-success"></i>
                         <h4>REACT JS</h4>
-                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur adipisci id nisi sint saepe similique.</p>
+                        <p class="line-clamp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            adipisci id nisi sint saepe similique.</p>
                         <button class="btn btn-primary">Daha fazla ..</button>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- messages-end -->
 
+        <!-- parallax-start -->
+        <!-- section#parallax>div.container>div.row>h2.myHeading{Haberler}+p{lorem*12}+button.btn.btn-primary -->
+        <section id="parallax">
+            <div class="container">
+                <div class="row">
+                    <h2 class="myHeading">Haberler</h2>
+                    <p class="line-clamp20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus iure sapiente dolores at minima similique consequatur impedit fugiat distinctio. Sunt vel eligendi iure eos sint assumenda fuga reprehenderit alias ipsum.
+                    Dolores, aliquid aliquam qui consectetur doloribus nam rerum pariatur ullam dolorum possimus aut eius iusto esse inventore recusandae sequi itaque, unde porro nulla repudiandae iure animi! Vero iste impedit eligendi?
+                    Eligendi ad atque vitae excepturi fuga exercitationem dolores corrupti at voluptate reprehenderit. Autem maxime voluptate nesciunt cum, porro optio necessitatibus corrupti eius nulla quaerat expedita culpa! Totam animi mollitia facere!
+                    Magnam voluptatibus recusandae tempore ipsam saepe illo officia numquam accusamus facilis voluptate necessitatibus minus officiis, possimus expedita ex atque, temporibus quod natus totam, doloremque repellat. Rem eos sed nulla necessitatibus.
+                    Rem, dolore corrupti voluptate veritatis et eveniet, unde provident facilis perspiciatis reprehenderit quo enim corporis nihil sed deserunt, itaque cum nostrum. Eaque repellat ut animi obcaecati fuga dolor explicabo atque!
+                    Libero voluptates, labore cumque rerum ex saepe reprehenderit illo. Incidunt repellendus maiores, iure placeat nihil ad eius qui suscipit veritatis nulla veniam, consequatur unde sit quae assumenda optio provident ducimus?
+                    Explicabo quibusdam assumenda nulla. Itaque eum earum quisquam asperiores quos dolores molestias voluptates nostrum id aliquid. Error hic iusto enim aspernatur, deleniti fuga molestias labore, unde officiis temporibus porro minus.
+                    Facilis, sequi rem laudantium hic molestias voluptatem aliquid quasi odit, veniam quia nulla! Iusto repudiandae qui nostrum officia similique velit ratione est? In ullam fuga expedita sapiente totam fugiat distinctio.
+                    Voluptates maiores animi nihil ducimus alias saepe aperiam, maxime dolorem omnis aliquid iste ea sint perspiciatis fugit eveniet recusandae neque rerum veritatis, vero fuga! Animi neque voluptatibus tempora porro voluptatum.
+                    Repellendus dignissimos autem harum, accusantium debitis quia iure asperiores omnis atque numquam nobis, modi corporis quas dolores nulla. Assumenda, eum ut placeat laudantium hic eos quam numquam libero eaque quod.
+                    Error dignissimos cupiditate neque, molestias cumque praesentium atque fuga facilis voluptatem eius quis quas sunt impedit saepe, consequatur beatae eaque. Quasi tempora minima consectetur molestiae possimus nobis minus expedita blanditiis.
+                    Iusto nemo, quibusdam voluptas illum est perferendis facere dolores eveniet corporis aspernatur nesciunt in? Odio saepe modi vitae omnis iusto optio corporis, corrupti pariatur molestias perspiciatis, magni, debitis sequi voluptatum.</p>
+                    <div class="col-4"></div>
+                    <div class="col-4"> <a class="btn btn-primary"> Daha Fazla ...</a></div>
+                    <div class="col-4"></div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- parallax-end -->
     </main>
     <!-- end main codes -->
 
